--- a/AanDeSlag/AanDeSlag.html
+++ b/AanDeSlag/AanDeSlag.html
@@ -205,5 +205,5 @@
 <body>
     <div id="viewDiv"></div>
 </body>
-
+<script src="https://esrinederland.github.io/CoolMonitor/CoolMonitor.js"></script>
 </html>
